syntax = "proto3";

package yandex.spqr;

option go_package = "yandex/spqr/proto";
  
service KeyRangeService {
  rpc ListKeyRange (ListKeyRangeRequest) returns (KeyRangeReply) {}
  rpc LockKeyRange (LockKeyRangeRequest) returns (LockKeyRangeReply) {}
  rpc UnlockKeyRange (UnlockKeyRangeRequest) returns (UnlockKeyRangeReply) {}
  rpc SplitKeyRange (SplitKeyRangeRequest) returns (SplitKeyRangeReply) {}
  rpc AddShardingColumn(AddShardingColumnRequest) returns (AddShardingColumnReply) {}
  rpc AddLocalTable(AddLocalTableRequest) returns (AddLocalTableReply) {}
}

message AddShardingColumnReply {
}

message AddLocalTableReply {

}

message AddLocalTableRequest {
  string tname = 1;
}

message AddShardingColumnRequest {
  repeated string colname = 1;
}

enum KeyRangeStatus {
  LOCKED = 0;
  AVAILABLE = 1;
}

// key range is mapped to shard
message KeyRange {

  bytes lower_bound = 1;
  bytes upper_bound = 2;

  string krid = 3;
  string shardId = 4;
}

message ListKeyRangeRequest {
}

message SplitKeyRangeRequest {
  string krid = 1;
  bytes bound = 2;
}

message SplitKeyRangeReply {
  string splitted_krid = 1;
}

message LockKeyRangeRequest {
  string krid = 3;
}

message LockKeyRangeReply {
  KeyRangeStatus status = 1;
}

message UnlockKeyRangeRequest {
  string krid = 3;
}

message UnlockKeyRangeReply {
  KeyRangeStatus status = 1;
}

message KeyRangeReply {
	repeated KeyRange key_ranges = 1;
}

